[gd_scene load_steps=7 format=3 uid="uid://crn5bcxvo0dgp"]

[ext_resource type="Script" path="res://navigator.gd" id="1_8i6fs"]
[ext_resource type="Script" path="res://petunjuk2.gd" id="1_816de"]
[ext_resource type="Texture2D" uid="uid://cfw1loq3vbj78" path="res://sprites/welcome_page/bg.png" id="2_37ykp"]
[ext_resource type="Texture2D" uid="uid://b5pxyvrc7yxhb" path="res://sprites/buttonHome.png" id="3_s8vgm"]
[ext_resource type="Texture2D" uid="uid://g8btru4fmn5f" path="res://sprites/petunjuk/petunjuk2.png" id="4_34i3o"]
[ext_resource type="Texture2D" uid="uid://i6elts8yx3ju" path="res://sprites/buttonArrowKekanan.png" id="5_v002y"]

[node name="Navigator" type="Node"]
script = ExtResource("1_816de")

[node name="bg" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_37ykp")

[node name="homeButton" type="TextureButton" parent="."]
offset_left = 1127.0
offset_top = 583.0
offset_right = 1210.0
offset_bottom = 673.0
texture_normal = ExtResource("3_s8vgm")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -383.0
offset_top = -323.0
offset_right = 383.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_34i3o")

[node name="nextButton" type="TextureButton" parent="."]
offset_left = 606.0
offset_top = 584.0
offset_right = 689.0
offset_bottom = 674.0
texture_normal = ExtResource("5_v002y")

[node name="Navigator" type="Node" parent="."]
script = ExtResource("1_8i6fs")

[connection signal="pressed" from="homeButton" to="Navigator" method="_on_homeButton_pressed"]
[connection signal="pressed" from="nextButton" to="Navigator" method="_on_nextStageButton_pressed"]
